# neo4j-mcp

./: .env.example  LICENSE  README.md  neo4j_config.example.json  pyproject.toml  requirements.txt  test_neo4j_mcp_client.py
neo4j_mcp_server/: __init__.py  server.py
neo4j_mcp_server/tools/: __init__.py
neo4j_mcp_server/tools/neo4j_memory/: __init__.py  tools.py
tests/: __init__.py  test_ast_grep.py
